Remove java.awt dependency and clamp (use Java17 max)